--- a/css/task14-2.css
+++ b/css/task14-2.css
@@ -2371,7 +2371,7 @@ html {
 .contact {
   display: flex;
   justify-content: space-between;
-  color: #29bde0;
+  color: #29b078;
   font-size: 14px;
   width: 1200px;
   margin: 0 auto;
@@ -2383,13 +2383,12 @@ html {
   padding-left: 0.1rem;
   line-height: 0.2rem;
   text-align: center;
-  color: #29bde0;
+  color: #29b078;
   text-decoration: none;
-  border-right: 1px solid lightgrey;
   padding-right: 0.1rem;
 }
 .contact a :hover {
-  color: #fd9f0b;
+  color: #ffffff;
 }
 .contact div {
   display: inline-block;
@@ -2417,7 +2416,7 @@ html {
     display: inline-block;
     font-size: 0.15rem;
     text-align: center;
-    color: #29bde0;
+    color: #29b078;
     text-decoration: none;
   }
 }
@@ -2427,7 +2426,7 @@ html {
   right: 0;
   position: absolute;
   color: #ffffff;
-  background-color: #29bde0;
+  background-color: #29b078;
   font-size: 15px;
   display: flex;
   justify-content: space-between;
@@ -2442,16 +2441,21 @@ html {
   height: 100%;
   margin: 0 auto;
 }
-.navigation span a {
+.navigation .link {
+  margin-right: -10px;
+}
+.navigation .link a {
   text-decoration: none;
   height: 0.6rem;
   margin-top: 0.4rem;
   color: #ffffff;
   display: inline-block;
+  width: 0.8rem;
+  text-align: center;
   margin-left: 0.2rem;
 }
-.navigation span a:hover {
-  color: #fd9f0b;
+.navigation .link a:hover {
+  color: #ffffff;
   border-bottom: 4px solid white;
 }
 @media screen and (max-width: 1080px) {
@@ -2470,7 +2474,7 @@ html {
     display: block;
   }
   .btn1 {
-    background-color: #29bde0;
+    background-color: #29b078;
     width: 0.8rem;
     display: block;
     float: right;
@@ -2480,7 +2484,7 @@ html {
   }
   .menu1 {
     width: 100%;
-    background-color: #29bde0;
+    background-color: #29b078;
     position: relative;
     color: white;
     text-align: center;
@@ -2521,7 +2525,7 @@ main .frontpage {
   font-size: 0.16rem;
 }
 main .frontpage span {
-  color: #29bde0;
+  color: #29b078;
 }
 main .navbar {
   width: 3.05rem;
@@ -2538,7 +2542,7 @@ main .navbar div {
   border-bottom: 1px solid lightgrey;
 }
 main .navbar ul {
-  color: #29bde0;
+  color: #29b078;
   margin-left: 20%;
   list-style: none;
   margin-bottom: 0.5rem;
@@ -2550,7 +2554,7 @@ main .navbar ul li {
 }
 main .navbar ul li:hover {
   background: url("../img/round8.png") left center no-repeat;
-  color: #fd9f0b;
+  color: #ff650e;
 }
 main .maincontent {
   margin-top: 0.26rem;
@@ -2587,6 +2591,25 @@ main .maincontent .tudou p {
     display: block;
     margin: 0.3rem auto;
   }
+  main .navbar ul {
+    color: #29b078;
+    list-style: none;
+    width: 1rem;
+    margin: 0.5rem auto;
+    padding: 0;
+  }
+  main .navbar ul li {
+    text-align: center;
+  }
+  main .navbar .maincontent {
+    float: none;
+    display: block;
+    width: 70%;
+    margin: 0 auto;
+  }
+  main .navbar .maincontent .title {
+    flex-direction: column;
+  }
   main .maincontent {
     float: none;
     display: block;
@@ -2602,7 +2625,7 @@ footer {
   color: white;
   font-size: 0.18rem;
   width: 100%;
-  background-color: #29bde0;
+  background-color: #29b078;
 }
 footer a {
   display: inline-block;
@@ -2624,7 +2647,7 @@ footer .fot1 {
   padding-top: 0.3rem;
   height: 1.5rem;
   width: 1200px;
-  background-color: #29bde0;
+  background-color: #29b078;
   margin: 0 auto;
 }
 footer .fr {
@@ -2652,7 +2675,7 @@ footer .qixia div span {
 .copyright {
   text-align: center;
   width: 100%;
-  background-color: #29bde0;
+  background-color: #29b078;
   color: white;
   border-top: 1px solid #32c086;
   padding-top: 0.1rem;
