--- a/css/task14-3.css
+++ b/css/task14-3.css
@@ -2371,7 +2371,7 @@ html {
 .contact {
   display: flex;
   justify-content: space-between;
-  color: #29bde0;
+  color: #29b078;
   font-size: 14px;
   width: 1200px;
   margin: 0 auto;
@@ -2383,13 +2383,12 @@ html {
   padding-left: 0.1rem;
   line-height: 0.2rem;
   text-align: center;
-  color: #29bde0;
+  color: #29b078;
   text-decoration: none;
-  border-right: 1px solid lightgrey;
   padding-right: 0.1rem;
 }
 .contact a :hover {
-  color: #fd9f0b;
+  color: #ffffff;
 }
 .contact div {
   display: inline-block;
@@ -2417,7 +2416,7 @@ html {
     display: inline-block;
     font-size: 0.15rem;
     text-align: center;
-    color: #29bde0;
+    color: #29b078;
     text-decoration: none;
   }
 }
@@ -2427,7 +2426,7 @@ html {
   right: 0;
   position: absolute;
   color: #ffffff;
-  background-color: #29bde0;
+  background-color: #29b078;
   font-size: 15px;
   display: flex;
   justify-content: space-between;
@@ -2442,16 +2441,21 @@ html {
   height: 100%;
   margin: 0 auto;
 }
-.navigation span a {
+.navigation .link {
+  margin-right: -10px;
+}
+.navigation .link a {
   text-decoration: none;
   height: 0.6rem;
   margin-top: 0.4rem;
   color: #ffffff;
   display: inline-block;
+  width: 0.8rem;
+  text-align: center;
   margin-left: 0.2rem;
 }
-.navigation span a:hover {
-  color: #fd9f0b;
+.navigation .link a:hover {
+  color: #ffffff;
   border-bottom: 4px solid white;
 }
 @media screen and (max-width: 1080px) {
@@ -2470,7 +2474,7 @@ html {
     display: block;
   }
   .btn1 {
-    background-color: #29bde0;
+    background-color: #29b078;
     width: 0.8rem;
     display: block;
     float: right;
@@ -2480,7 +2484,7 @@ html {
   }
   .menu1 {
     width: 100%;
-    background-color: #29bde0;
+    background-color: #29b078;
     position: relative;
     color: white;
     text-align: center;
@@ -2513,7 +2517,7 @@ main .frontpage {
   font-size: 0.15rem;
 }
 main .frontpage span {
-  color: #29bde0;
+  color: #29b078;
 }
 main .direction {
   width: 100%;
@@ -2532,9 +2536,29 @@ main .direction a {
   color: black;
 }
 main .direction a:hover {
-  background-color: #29bde0;
+  background-color: #29b078;
   color: white;
   text-decoration: none;
+}
+main .cell-bt {
+  display: none;
+}
+@media screen and (max-width: 1080px) {
+  main .direction {
+    display: none;
+  }
+  main .cell-bt {
+    display: block;
+    width: 30%;
+    margin: 0 auto;
+    text-align: center;
+    height: 0.5rem;
+    line-height: 0.5rem;
+  }
+  main .cell-bt select {
+    width: 100%;
+    height: 0.5rem;
+  }
 }
 main .headline {
   width: 100%;
@@ -2557,6 +2581,24 @@ main .carrierall .carrier {
   width: 30%;
   margin-top: 0.4rem;
   box-shadow: 1px 1px 3px lightgrey;
+}
+main .carrierall .carrier .hda {
+  display: flex;
+  justify-content: space-around;
+}
+main .carrierall .carrier .hda .item1 {
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+main .carrierall .carrier .hda .item2 {
+  flex: 2;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+main .carrierall .carrier .hda .item2 p {
+  margin-top: -50px;
 }
 main .carrierall .carrier .door {
   padding: 0.1rem 0.1rem;
@@ -2656,7 +2698,7 @@ footer {
   color: white;
   font-size: 0.18rem;
   width: 100%;
-  background-color: #29bde0;
+  background-color: #29b078;
 }
 footer a {
   display: inline-block;
@@ -2678,7 +2720,7 @@ footer .fot1 {
   padding-top: 0.3rem;
   height: 1.5rem;
   width: 1200px;
-  background-color: #29bde0;
+  background-color: #29b078;
   margin: 0 auto;
 }
 footer .fr {
@@ -2706,7 +2748,7 @@ footer .qixia div span {
 .copyright {
   text-align: center;
   width: 100%;
-  background-color: #29bde0;
+  background-color: #29b078;
   color: white;
   border-top: 1px solid #32c086;
   padding-top: 0.1rem;
