--- a/css/task4-2.css
+++ b/css/task4-2.css
@@ -2349,458 +2349,88 @@
 html {
   font-size: 625%;
 }
-.bxshadow {
-  box-shadow: 1px 1px 3px lightgrey;
+body {
+  background-color: #f0f0f0;
 }
-.borderr {
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-}
-.fonthead {
-  font-weight: bold;
-  font-size: 18px;
-  text-align: center;
-}
-.media {
-  width: 100%;
-  margin: 0 auto;
+header {
   display: flex;
-  flex-direction: column;
-}
-.contact {
-  display: flex;
-  justify-content: space-between;
-  color: #29b078;
-  font-size: 14px;
-  width: 1200px;
-  margin: 0 auto;
-}
-.contact a {
-  width: 0.5rem;
-  height: 0.2rem;
-  display: inline-block;
-  padding-left: 0.1rem;
-  line-height: 0.2rem;
-  text-align: center;
-  color: #29b078;
-  text-decoration: none;
-  padding-right: 0.1rem;
-}
-.contact a :hover {
-  color: #ffffff;
-}
-.contact div {
-  display: inline-block;
-  height: 0.35rem;
-  line-height: 0.35rem;
-}
-@media screen and (max-width: 1080px) {
-  .contact {
-    display: none;
-  }
-}
-.cellphone {
-  display: none;
-}
-@media screen and (max-width: 1080px) {
-  .cellphone {
-    display: block;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .cellphone a {
-    width: 15%;
-    display: inline-block;
-    font-size: 0.15rem;
-    text-align: center;
-    color: #29b078;
-    text-decoration: none;
-  }
-}
-.navigation {
   width: 100%;
+  top: 0;
   left: 0;
   right: 0;
   position: absolute;
-  color: #ffffff;
-  background-color: #29b078;
-  font-size: 15px;
-  display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 1rem;
+  padding: 0 2.5% 0 2.5%;
+  height: 0.7rem;
+  background-color: #29bde0;
+  font-size: 0.34rem;
+  color: white;
 }
-.navigation div {
-  width: 1200px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-  margin: 0 auto;
-}
-.navigation .link {
-  margin-right: -10px;
-}
-.navigation .link a {
-  text-decoration: none;
-  height: 0.6rem;
-  margin-top: 0.4rem;
-  color: #ffffff;
+header span {
   display: inline-block;
-  width: 0.8rem;
-  text-align: center;
-  margin-left: 0.2rem;
 }
-.navigation .link a:hover {
-  color: #ffffff;
-  border-bottom: 4px solid white;
-}
-@media screen and (max-width: 1080px) {
-  .navigation span {
-    margin-left: 0.2rem;
-  }
-  .link {
-    display: none;
-  }
-}
-.dropdown {
-  display: none;
-}
-@media screen and (max-width: 1080px) {
-  .dropdown {
-    display: block;
-  }
-  .btn1 {
-    background-color: #29b078;
-    width: 0.8rem;
-    display: block;
-    float: right;
-    display: inline;
-    margin-right: 0.1rem;
-    margin-top: 0.15rem;
-  }
-  .menu1 {
-    width: 100%;
-    background-color: #29b078;
-    position: relative;
-    color: white;
-    text-align: center;
-  }
-  .menu1 li a {
-    color: white;
-  }
-}
-.howtolearn {
-  width: 1200px;
-  margin: 0.5rem auto;
-  font-size: 16px;
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-}
-.howtolearn .item1 {
-  display: flex;
-  flex-direction: column;
-  width: 25%;
-  padding: 0.3rem 0.3rem 0 0;
-}
-.howtolearn .item1 span {
-  text-align: center;
-  padding: 0.1rem;
-}
-.howtolearn .item2 {
-  display: flex;
-  flex-direction: column;
-  width: 25%;
-  padding: 0.3rem 0.3rem;
-}
-.howtolearn .item2 span {
-  text-align: center;
-  padding: 0.1rem;
-}
-.howtolearn .item3 {
-  display: flex;
-  flex-direction: column;
-  padding: 0.3rem 0.3rem;
-  width: 25%;
-}
-.howtolearn .item3 span {
-  text-align: center;
-  padding: 0.1rem;
-}
-.howtolearn .item4 {
-  width: 25%;
-  display: flex;
-  justify-content: space-between;
-  color: #29b078;
-}
-.howtolearn .count {
-  width: 100%;
+header button {
+  width: 0.5rem;
   height: 0.5rem;
-  line-height: 0.5rem;
-  margin-top: 0.5rem;
+  position: absolute;
+  opacity: 0;
 }
-@media screen and (max-width: 1426px) {
-  .howtolearn {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-  }
-  .howtolearn .item1,
-  .howtolearn .item2,
-  .howtolearn .item3 {
-    width: 100%;
-    padding: 0 0 0 0;
-  }
-  .howtolearn .item1 p,
-  .howtolearn .item2 p,
-  .howtolearn .item3 p {
-    text-align: center;
-  }
-  .howtolearn .item4 {
-    width: 100%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    padding: 0 0 0 0;
-  }
-  .howtolearn .item4 .count {
-    width: 100%;
-    height: 0;
-    margin-top: 0;
-  }
+main {
+  width: 97%;
+  margin: 1rem auto;
+  background-color: #ffffff;
+  height: 6rem;
 }
-.grid {
+main .day {
+  padding: 0.34rem 0;
+  color: #29bde0;
+  font-size: 0.3rem;
   width: 100%;
-  height: 100%;
-  background-image: linear-gradient(to bottom, #cccccc 0%, #cccccc 50%, transparent 50%);
-  background-size: 1px 25px;
-  background-repeat: repeat-y;
-}
-.lunbotu {
-  margin-top: 1rem;
-}
-.imgw {
-  width: 100%;
-}
-.theway {
-  width: 1200px;
-  margin: 0.3rem auto;
-  display: flex;
-}
-.item10 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 27%;
-}
-.item11 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 23%;
-}
-.num {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  color: #29b078;
-  border: 1px solid lightgrey;
-  padding-right: 20px;
-  padding-top: 5px;
-  margin-right: 10px;
-  box-shadow: 1px 1px 3px lightgrey;
-  display: flex;
-  align-items: center;
-  padding-left: 20px;
-  font-size: 17px;
-}
-h3 {
-  text-align: center;
-  margin-bottom: 0.5rem;
-  margin-top: 0.5rem;
-}
-@media screen and (max-width: 1080px) {
-  .theway {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-  }
-  .theway .item11,
-  .theway .item10 {
-    width: 60%;
-    margin: 0.2rem auto;
-  }
-  .htl {
-    margin-top: 2.5rem;
-  }
-}
-.student {
-  width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-}
-.student div {
-  color: #a1a1a1;
-  width: 22.6%;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-  height: 3.74rem;
-  box-shadow: 1px 1px 3px lightgrey;
-  display: flex;
-  flex-direction: column;
+  border-bottom: 1px solid lightgrey;
   text-align: center;
 }
-.student div span {
-  margin-top: 0.2rem;
-  padding: 0.1rem 0.3rem;
-  text-align: center;
-}
-.student div span img {
-  max-width: 100%;
-  height: auto;
-}
-@media screen and (max-width: 1080px) {
-  .student {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-  }
-  .student div {
-    width: 70%;
-    margin: 0 auto;
-    margin-top: 0.1rem;
-    height: 4.5rem;
-  }
-}
-.company {
-  width: 1200px;
-  box-shadow: 1px 1px 3px lightgrey;
-  margin: 0 auto;
+main .process {
   display: flex;
-  justify-content: space-between;
 }
-.company span:hover {
-  box-shadow: 1px 1px 3px lightgrey;
+main .process .left {
+  flex: 1;
+  border-right: 1px solid lightgrey;
 }
-@media screen and (max-width: 1080px) {
-  .company {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-  }
-  .company span {
-    width: 80%;
-    margin: 0.1rem auto;
-  }
-  .company span img {
-    width: 100%;
-    display: inline-block;
-    margin: 0.1rem auto;
-  }
+main .process .right {
+  flex: 5;
 }
-.links {
-  width: 1200px;
-  margin: 0 auto;
+main .process .right img {
+  margin-left: -30px;
 }
-.links ul {
-  padding: 0 0;
-  display: flex;
-  justify-content: space-between;
-  list-style-type: disc;
-  color: #a1a1a1;
-}
-.links ul a {
-  color: #a1a1a1;
-}
-.links ul a:hover {
-  color: #ffffff;
-}
-@media screen and (max-width: 1080px) {
-  .links {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-  }
-  .links ul {
-    display: flex;
-    flex-direction: column;
-    width: 30%;
-    margin: 0 auto;
-  }
-  .links ul li {
-    text-align: center;
-    margin-top: 0.1rem;
-  }
-}
-footer {
-  margin-top: 0.3rem;
-  color: white;
-  font-size: 0.18rem;
-  width: 100%;
-  background-color: #29b078;
-}
-footer a {
+main .process .right .triangle {
+  width: 20px;
+  position: absolute;
+  margin-top: 40px;
   display: inline-block;
-  text-decoration: none;
+  border-style: dashed solid dashed dashed;
+  border-color: transparent #24a7c6 transparent transparent;
+  border-width: 20px;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+}
+main .process .right .lef {
+  margin-left: 30px;
+}
+main .process .right button {
+  margin-left: 40px;
+  width: 80%;
+  background-color: #24a7c6;
+  height: 0.73rem;
+  border: none;
   color: white;
-  font-size: 0.16rem;
-  height: 0.4rem;
-  padding: 0 0 0 0;
-  padding-bottom: 0.1rem;
+  font-size: 0.3rem;
+  margin-top: 0.23rem;
 }
-footer a:hover {
-  text-decoration: none;
-  color: white;
-  border-bottom: 1px solid white;
+main .process .right .after {
+  background-color: #fdbc48;
 }
-footer .fot1 {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 0.3rem;
-  height: 1.5rem;
-  width: 1200px;
-  background-color: #29b078;
-  margin: 0 auto;
-}
-footer .fr {
-  display: flex;
-  flex-direction: column;
-}
-footer .qixia div span {
-  padding-right: 0.3rem;
-}
-@media screen and (max-width: 1080px) {
-  footer {
-    height: 5rem;
-  }
-  footer .fot1 {
-    flex-direction: column;
-    width: 2rem;
-    margin: 0 auto;
-    padding-top: 0.3rem;
-  }
-  footer .fr img {
-    width: 0.93rem;
-    height: 0.93rem;
-  }
-}
-.copyright {
-  text-align: center;
-  width: 100%;
-  background-color: #29b078;
-  color: white;
-  border-top: 1px solid #32c086;
-  padding-top: 0.1rem;
+main .process .right .lf {
+  margin-left: 70px;
 }
