--- a/less/task11.less
+++ b/less/task11.less
@@ -33,14 +33,17 @@ header{
   top:0;
   @h:0.32rem;
   .fix();
-  background:@main_bgc;
+  background:#5fc0cd;
   height:@h*3-0.08rem;
+
+  padding: 0.3rem 0.2rem;
   line-height:@h;
   .font-s(32px);
    width:100%;
    padding-left:4%;
   padding-right:4%;
-   .space();
+  color:white;
+  .tc;
   a{
     color:white;
     .font-s(36px);
@@ -50,6 +53,15 @@ header{
        color:white;
   }
   }
+  .a1{
+    .fl;
+    color:white;
+  }
+  .a3{
+    .fr;
+    color:white;
+  }
+
 }
 main{
   @h:1rem;
@@ -91,9 +103,11 @@ main{
     }
 .text{
   background:white url("../img/iphone.png") no-repeat 0.32rem center;
+  background-size:0.52rem 0.32rem;
 }
 .password{
   background: white url("../img/locked2.png") no-repeat 0.3rem center;
+  background-size:0.52rem 0.32rem;
 }
 .button1{
  .button;
@@ -102,7 +116,7 @@ main{
 }
 .code a{
   .fr();
-  color:@main_bgc;
+  color:#5fc0cd;
   padding:0 0.1rem 0 0;
   .font-s(32px);
   margin-top:0.1rem;
