--- a/less/task13-3.less
+++ b/less/task13-3.less
@@ -75,20 +75,24 @@ main{
   }
   .count1{
     .flexb;
+    .sec{
+      margin-left:7px!important;
+    }
   }
 }
 .down{
   .bgcolor(white);
+  margin-bottom:2rem;
   ul{
     .list-sn;
     padding:0;
-    margin-left:11.6%;
-    margin-right:11.6%;
     .bgcolor(white);
     li{
       color:#cbcbcb;
+      .w100;
+      border-bottom:1px solid #dddddd;
       div{
-        margin:0.3rem 0;
+        margin:0.1rem 11.6%;
       }
     }
   }
@@ -107,7 +111,7 @@ main{
 .footer_3{
   .fix();
   .pumanb;
-  height:1.6rem;
+  height:1.3rem;
   color:white;
   background-color:rgba(41,189,224,0.3);
   z-index:999;
@@ -116,7 +120,7 @@ main{
 }
 .bt1{
   width:40%;
-  height:70%;
+  height:60%;
   .bgcolor(#f66f6f);
   .font-s(0.2rem);
   color:white;
@@ -125,7 +129,7 @@ main{
 }
 .bt2{
   width:40%;
-  height:70%;
+  height:60%;
   .bgcolor(#fbb435);
   .font-s(0.2rem);
   color:white;
