--- a/less/task13.less
+++ b/less/task13.less
@@ -12,75 +12,100 @@ body{
   .bgcolor(@body_bgc);
 }
 
-//header
-header{
-  height:1rem;
-  .bgcolor(@main_bgc);
-  .w100;
-  a{
-    .db;
-    padding-top:0.5rem;
+//两分布局
+.main{
+  .rel;
+  .slidebar{
+    width:3rem;
+    margin-left:-3rem;
+    .abs;
+    height:10rem;
+    .fl;
+    .bgcolor(white);
+    div{
+      border-bottom: 1px solid lightgrey;
+      height:1rem;
+      .flex;
+      align-items: center;
+      justify-content: space-between;
+      padding:0 0.3rem;
+      .w100;
+      .font-s(0.3rem);
+      color:@main_bgc;
+    }
   }
-}
-main{
-  margin:30px 6% 59px 6%;
- .mainb{
-   margin-top:0.3rem;
-   background: white url("../img/多边形1.png")97% 52% no-repeat;
- }
-  .btnb{
-    .w100;
-    height:0.8rem;
-    padding-left:10%;
-    padding-right:10%;
-    .tc;
-    .font-s20;
-    color:#9a9a9a;
-    .bg-m(white,"../img/icon1.png",95%,center);
-    border:none;
-  }
-  .btn{
-   width:70%;
-    .bc;
-    .db;
-    .font-s14;
-    color:white;
-    background-color:@main_bgc;
-    height:0.7rem;
-    border-radius: 0.01px;
-
-  }
-  p{
-    .tc;
-    .font-s12;
-    color:#9a9a9a;
-  }
-  .ghost{
-    color:#fbb435;
-    .font-s22;
-    padding:0.3rem;
-    border-bottom:1px solid #fbb435;
-  }
-  .yuanquan{
-    width:0.6rem;
-    .bc;
-  }
-  .circle1{
-    background-color:#69d1e9;
-    .border-radius(50%);
-    width:0.1rem;
-    height:0.1rem;
-    .dib;
+  .maincontent{
+    width:100%;
+    .bgcolor(#f0f0f0);
+    height:10rem;
+    .head{
+     .w100;
+     .bgcolor(@main_bgc);
+     height:0.78rem;
+      line-height: 0.78rem;
+      padding-left:0.2rem;
+   }
+    .btnb{
+      width:89%;
+      height:1.15rem;
+      .bgcolor(white);
+      border:0.01rem solid #cdcdcd;
+      .font-s(3vw);
+      line-height: 1.15rem;
+      color:#c0c0c0;
+      .db;
+      background:#ffffff url("../img/icon1.png") right center no-repeat ;
+      @media screen and (max-width: 320px){
+        .font-s(0.15rem);
       }
-  .circle{
-    background-color:@body_bgc;
-    .border-radius(50%);
-    width:0.1rem;
-    height:0.1rem;
-    .dib;
+      margin: 0.3rem auto;
+      img{
+        .fr;
+      }
+    }
+    .mainb{
+      width:89%;
+      margin:0 auto;
+      .bgcolor(white);
+      .tc;
+      .font-s(3vw);
+      .ghost{
+        color:#fcbd4e;
+        padding:0.2rem 0 0.2rem 0;
+        border-bottom: 1px solid #fcbd4e;
+      }
+      .btn{
+          width:80%;
+          .bgcolor(#69d1e9);
+         height:0.8rem;
+        .font-s(2.5vw);
+        color:white;
+        .border-radius(0);
+      }
+      p{
+        .font-s(0.15rem);
+        color:#cdcdcd;
+      }
+      .yuanquan{
+        width:60px;
+        margin:0.1rem auto;
+        padding-bottom: 0.2rem;
+        .flex;
+        justify-content: space-around;
+         .circle1{
+           width:10px;
+           height:10px;
+           border-radius: 50%;
+           .bgcolor(#69d1e9);
+         }
+        .circle{
+          width:10px;
+          height:10px;
+          border-radius: 50%;
+          .bgcolor(white);
+          border:0.01rem solid lightgrey;
+        }
+      }
+    }
   }
-
 }
-
-
-
