--- a/less/task14.less
+++ b/less/task14.less
@@ -4,7 +4,7 @@
 @import "font-awesome";
 @import "css3";
 //公用的变量
-@import "blmatt";
+@import "bl14";
 html{
   font-size:625%;
 }
@@ -42,7 +42,6 @@ html{
     .tc;
     color: @main_bgc;
     .text-n;
-    border-right: 1px solid lightgrey;
     padding-right: 0.1rem;
     :hover{
       color:@link_hover;
@@ -97,18 +96,22 @@ html{
     .h100;
     margin: 0 auto;
   }
-   span a{
-   .text-n();
-     height:0.6rem;
-     margin-top:0.4rem;
-    color:@link_color;
-     .dib;
-     margin-left:0.2rem;
-    &:hover{
-      color:@link_hover;
-      border-bottom:4px solid white;
+  .link {
+    margin-right:-10px;
+    a {
+      .text-n();
+      height: 0.6rem;
+      margin-top: 0.4rem;
+      color: @link_color;
+      .dib;
+      width: 0.8rem;
+      .tc;
+      margin-left: 0.2rem;
+      &:hover {
+        color: @link_hover;
+        border-bottom: 4px solid white;
+      }
     }
-
   }
 }
 @media screen and (max-width: 1080px) {
@@ -159,7 +162,7 @@ html{
     .flex;
     flex-direction: column;
     width:25%;
-    padding:0.3rem 0.3rem 0.3rem 0;
+    padding:0.3rem 0.3rem 0 0;
     span{
       .tc;
       padding:0.1rem;
@@ -279,7 +282,7 @@ h3{
     .media;
     .item11,.item10{
       width:60%;
-      margin:0 auto;
+      margin:0.2rem auto;
     }
   }
   .htl{
@@ -297,6 +300,11 @@ h3{
     span{
       margin-top:0.2rem;
       padding:0.1rem 0.3rem;
+      .tc;
+      img{
+        max-width: 100%;
+        height: auto;
+      }
     }
     height:3.74rem;
    .bxshadow;
@@ -312,7 +320,8 @@ h3{
     div{
       width:70%;
       margin:0 auto;
-      margin-top:0.3rem;
+      margin-top:0.1rem;
+      height:4.5rem;
     }
   }
 }
@@ -375,107 +384,70 @@ h3{
   }
 }
 footer{
-  .w100;
-  .bgcolor(@main_bgc);
-  .clearfix{
-    clear:both;
-  }
-  height:2rem;
- .ft1{
-   width:1200px;
-   margin:0 auto;
-   overflow: hidden;
-   color:white;
-   .font-s(0.14rem);
-   p{
-     .font-s(0.16rem);
-   }
-   div{
-     .dib;
-     margin-top:0.4rem;
-   }
-   .fr{
-     .fr;
-     .flex;
-     flex-direction: column;
-   }
-   .fl{
-     .fl;
-     margin-right:1.54rem;
-     a{
-       margin-right:0;
-     }
-
-   p{
-     margin-bottom: 0.46rem;
-   }
-
-   }
-   .clearfix{
-     clear: both;
-   }
-   a{
-     .dib;
-     color:white;
-     .font-s(0.14rem);
-     .text-n();
-     padding-bottom: 0.05rem;
-     margin-top:0.1rem;
-     margin-right:0.1rem;
-     &:hover{
-       border-bottom: 1px solid white;
-     }
-   }
-   .qixia{
-     span{
-       .db;
-     }
-   }
- }
-}
-.copyright{
-  .tc;
+  margin-top:0.3rem;
   color:white;
-  .font-s12;
-  padding-top:0.2rem;
-  border-top:#32c086 1px solid;
+  .font-s(0.18rem);
+  a{
+    .dib;
+    .text-n();
+    color:white;
+    .font-s(0.16rem);
+    height:0.4rem;
+    padding:0 0 0 0;
+    padding-bottom:0.1rem;
+    &:hover{
+      .text-n();
+      color:white;
+      border-bottom: 1px solid white;
+    }
+  }
+  .fot1{
+    .flexb;
+    padding-top:0.3rem;
+    height:1.5rem;
+    width:1200px;
+    .bgcolor(@main_bgc);
+    margin:0 auto;
+  }
+  .fr{
+    .flex;
+    flex-direction: column;
+  }
+  width:100%;
+  .bgcolor(@main_bgc);
+  .qixia{
+    div{
+      span{
+        padding-right:0.3rem;
+      }
+    }
+  }
 }
 @media screen and (max-width: 1080px){
-  footer{
-    .media;
-    height:6rem;
-    .ft1{
-      width:100%;
-      margin:0 auto;
-      div{
-        .db;
-        width:30%;
-        margin:0 auto;
-      }
-      .fl{
-        p{
-          width:30%;
-          margin:0 auto;
-        }
-        float:none;
-        span{
-          .db;
-          width:30%;
-          margin:0 auto;
-          padding:0 0 0 0;
-          a{
-            padding:0 0 0 0;
-          }
-        }
-      }
-      .fr{
-        float:none;
-      }
-      a{
-        height:0.3rem;
-      }
-    }
+  footer {
 
+    height: 5rem;
+
+    .fot1 {
+      flex-direction: column;
+      width:2rem;
+      margin: 0 auto;
+      padding-top:0.3rem;
+    }
+    .fr{
+      img{
+        width:0.93rem;
+        height:0.93rem;
+      }
     }
   }
+}
 
+.copyright{
+  .tc;
+  width:100%;
+  .bgcolor(@main_bgc);
+  color:white;
+  border-top:1px solid #32c086;
+  padding-top:0.1rem;
+}
