--- a/less/task2-js.less
+++ b/less/task2-js.less
@@ -14,154 +14,147 @@ body{
 //header
 header{
   display: flex;
-  width:100%;
+  width:95%;
+  top:0;
+  left:0;
+  right:0;
+  .abs;
   justify-content: space-between;
-  height:1.28rem;
+  align-items: center;
+  padding:0 2.5% 0 2.5%;
+  height:0.7rem;
   .bgcolor(@main_bgc);
   .font-s(0.34rem);
-  padding:0.58rem 3.5% 0.1rem 3.5%;
   color:white;
   span{
     .dib;
   }
+  button{
+    width:0.5rem;
+    height:0.5rem;
+    .abs;
+    opacity: 0;
+  }
 }
-.main_tp{
-  width:93%;
-  margin:0.2rem auto;
+
+
+//main
+.maintp {
+  width: 95%;
+  margin: 0 auto;
+  height: 3.38rem;
+  .flex;
   .bgcolor(white);
-  height:4.53rem;
-  align-items: center;
-  .playermatch{
-    width:20%;
-    .fl;
+  .left {
+    border-right: 1px solid lightgrey;
+    width: 13%;
+    .dib;
     .flex;
-    justify-content: center;
-    border-right:1px solid lightgrey;
     align-items: center;
-    .font-s(2.6vw);
-    height:100%;
-    span{
+    justify-content: center;
+    height: 3.38rem;
+    span {
+      .font-s(0.36rem);
+      width: 0.36rem;
       .dib;
-      width:2.6vw;
     }
   }
-  .playernumber{
-    width:80%;
-    .fr;
+  .right {
+    width: 87%;
+    height: 3.38rem;
     .flex;
     flex-direction: column;
-    ul{
-      .list-sn;
-      .w100;
-      .flex;
-      height:3.92rem;
-      margin-top:0.14rem;
+    .divide {
+      height: 85%;
+      width: 100%;
       border-bottom: 1px solid lightgrey;
-      flex-wrap: wrap;
-        li{
-          width:50%;
-          .font-s(2vw);
-          color:@main_fontcolor;
-          letter-spacing: 1vw;
-
-          .orange{
-            .dib;
-            width:0.1rem;
-            height:0.1rem;
-            .bgcolor(@link_hover);
-            margin-right:0.3rem;
-          }
-          .blue{
-            .dib;
-            width:0.1rem;
-            height:0.1rem;
-            .bgcolor(@main_bgc);
-            margin-right:0.3rem;
-          }
+      ul {
+        margin:0 0 0 0;
+        li {
+          .font-s(0.15rem);
+          .dib;
+          margin: 0 0.2rem;
         }
-    }
-    .set{
-      .tc;
-      .font-s(0.26rem);
-      color: @main_bgc;
-    }
-  }
-  }
-.main_letter{
-  .main_tp;
-  height:1.98rem;
-  ul{
-    .list-sn;
-    .font-s(0.28rem);
-    color:#f0f0f0;
-    li{
-      padding:0.22rem 0;
-      width:95%;
-      border-bottom: 3px solid #f0f0f0;
-    }
-  }
-}
-.main_number{
-  .main_tp;
-  height:1.48rem;
-  .font-s(0.28rem);
-  .tc;
-  input{
-    width:0.51rem;
-    .bgcolor(#f4f5f5);
-    .tc;
-    color:@link_hover;
-    border: none;
-    &::placeholder{
-      color:@link_hover;
-      .tc;
-    }
-  }
-  p{
-    padding:0.26rem 0.61rem 0 0.4rem;
-  }
-  .grey{
-    width:0.51rem;
-    height:0.40rem;
-    .tc;
-    .dib;
-    .bgcolor(#f4f5f5);
-    color:@link_hover;
-    margin:0 0.26rem;
-  }
-  span{
-    .dib;
-
-    div{
-      .dib;
-      width:4.1rem;
+        .orange {
+          color: @link_hover;
+          list-style-type: square;
         }
-    .progress {
-      .bgcolor(#ffe6be);
-      width:60vw;
-      height:0.06rem;
-      margin-bottom: 0;
-      .progress-bar {
-        .bgcolor(@link_hover);
-        height:0.37rem;
-        img{
-          .abs;
-          margin-top:-15px;
-          margin-left:10%;
+        .blue {
+          color: @main_bgc;
+          list-style-type: square;
+        }
+        .purple{
+          color:purple;
+          list-style-type: square;
         }
       }
     }
+    div {
+      .btns {
+        .dib;
+        margin-left:30vw;
+        border:none;
+        color:@main_bgc;
+        background-color: white;
+        .font-s(0.28rem);
+        .abs;
+      }
+    }
   }
-
 }
-.fapai{
-  width:93%;
-  margin:0 auto;
+.mainmenu{
+  width:95%;
+  margin:0.3rem auto;
+  height:1.87rem;
+  .font-s(0.34rem);
+  .bgcolor(white);
+  p {
+    padding:0.3rem 0.3rem 0.3rem 0.3rem;
+    .number {
+      width: 0.5rem;
+      height:0.44rem;
+      .tc;
+      .font-s(0.34rem);
+      color:@link_hover;
+      .bgcolor(#f4f5f5);
+      border:none;
+      &::placeholder{
+        color:@link_hover;
+        .tc;
+      }
+    }
+  }
+  div{
+    .flexb;
+    width:80%;
+    margin:0 auto;
+     input[type=range]{
+      -webkit-appearance: none;
+      width:70%;
+      border-radius: 10px;
+       &::-webkit-slider-runnable-track{
+         height: 15px;
+         .bgcolor(@link_hover);
+       }
+       &::-webkit-slider-thumb {
+         -webkit-appearance: none;
+         height: 45px;
+         width: 85px;
+         margin-top:-15px;
+         background: url("../img/volume.png") left center no-repeat;
+
+       }
+    }
+  }
+}
+.fap {
+  .abs;
+  margin-left:2%;
   .db;
-  height:0.87rem;
+  width:95%;
+  height:0.88rem;
   .bgcolor(@link_hover);
-  border:none;
+  color:white;
   .font-s(0.4rem);
-  color: white;
-  letter-spacing: 0.5vw;
+   border:none;
 }
