--- a/less/task4-2.less
+++ b/less/task4-2.less
@@ -50,6 +50,15 @@ main{
     border-bottom: 1px solid lightgrey;
     .tc;
   }
+  .startgame{
+    width:1rem;
+    height:1rem;
+    .bgcolor(#29bde0);
+    .abs;
+    border:none;
+    border-radius: 50%;
+    color:white;
+  }
   .process{
     display: flex;
     .left{
