--- a/css/task8-2.css
+++ b/css/task8-2.css
@@ -75,7 +75,7 @@ html {
     margin-top: 0.5rem;
     color: white;
     font-size: 16px;
-    height: 0.5rem;
+    height: 0.52rem;
     text-decoration: none;
     text-align: center;
     width: 98px;
@@ -188,7 +188,7 @@ main {
 .company li {
     padding-top: 0.3rem;
     padding-bottom: 0.2rem;
-    list-style-image: url("../img/椭圆7.png");
+    list-style-image: url("../img/round7.png");
     width: 100px;
     margin: 0 auto;
 }
@@ -202,7 +202,7 @@ main {
 }
 
 .company li:hover {
-    list-style-image: url("../img/椭圆8.png") !important;
+    list-style-image: url("../img/round8.png") !important;
 }
 
 .faster {
@@ -329,6 +329,7 @@ footer a:hover {
 }
 
 .copyright {
+    margin-top: 0.1rem;
     padding-top: 0.1rem;
     text-align: center;
     color: white;
