--- a/css/task8.css
+++ b/css/task8.css
@@ -520,6 +520,7 @@ footer a:hover{
     justify-content: space-between;
 }
 .copyright{
+    margin-top: 0.1rem;
     padding-top:0.1rem;
     text-align: center;
     color:white;
