--- a/css/task8.css
+++ b/css/task8.css
@@ -299,7 +299,7 @@ h5{
     margin-top:10px;
 }
 .arrow1{
-    background:url("../img/形状拷贝2.png") no-repeat 2px 0;
+    background:url("../img/arrowgreen.png") no-repeat 2px 0;
     height:30px;
     width:50px;
     margin: 10px 0 0 0;
