--- a/less/task4.less
+++ b/less/task4.less
@@ -97,6 +97,11 @@ header{
         .bgcolor(red);
       }
     }
+    .red1{
+      .name{
+        .bgcolor(red);
+      }
+    }
   }
 }
 .start{
