--- a/less/task4-2.less
+++ b/less/task4-2.less
@@ -5,97 +5,104 @@
 @import "css3";
 //公用的变量
 @import "blmatt";
-html{
-  font-size:625%;
+
+html {
+  font-size: 625%;
 }
-body{
+
+body {
   .bgcolor(#f0f0f0);
 }
 
 //header
-header{
+header {
   display: flex;
-  width:100%;
-  top:0;
-  left:0;
-  right:0;
+  width: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
   .abs;
   justify-content: space-between;
   align-items: center;
-  padding:0 2.5% 0 2.5%;
-  height:0.7rem;
+  padding: 0 2.5% 0 2.5%;
+  height: 0.7rem;
   .bgcolor(@main_bgc);
   .font-s(0.34rem);
-  color:white;
-  span{
+  color: white;
+  span {
     .dib;
   }
-  button{
-    width:0.5rem;
-    height:0.5rem;
+  button {
+    width: 0.5rem;
+    height: 0.5rem;
     .abs;
     opacity: 0;
   }
 }
-main{
-  width:97%;
-  margin:1rem auto;
+
+main {
+  width: 97%;
+  margin: 1rem auto;
   .bgcolor(white);
-  height:6rem;
-  .day{
-    padding:0.34rem 0;
-    color:#29bde0;
-    .font-s(0.3rem);
-    .w100;
-    border-bottom: 1px solid lightgrey;
+  height: 26rem;
+  .font-s(0.3rem);
+  h1 {
     .tc;
+    .font-s(0.3rem);
+    color: #29bde0;
+    width: 100%;
+    padding: 20px 0 30px 0;
+    border-bottom: 1px solid #c9c9c9;
   }
-  .startgame{
-    width:1rem;
-    height:1rem;
-    .bgcolor(#29bde0);
-    .abs;
-    border:none;
-    border-radius: 50%;
-    color:white;
+  ul {
+
+    display: none;
+    .tc;
+    list-style-type: none;
+    img {
+      margin-right: 20px;
+    }
   }
-  .process{
-    display: flex;
-    .left{
-      flex:1;
-      border-right: 1px solid lightgrey;
-    }
-    .right{
-      flex:5;
-      img{
-        margin-left:-30px;
-      }
-      .triangle{
-        width:20px;
-        .abs;
-        margin-top:40px;
-        .dib;
-        .triangle(right,20px,#24a7c6);
-      }
-      .lef{
-        margin-left:30px;
-      }
-     button{
-       margin-left:40px;
-       width:80%;
-       .bgcolor(#24a7c6);
-       height:0.73rem;
-       border: none;
-       color:white;
-       .font-s(0.3rem);
-       margin-top:0.23rem;
-     }
-      .after{
-        .bgcolor(#fdbc48);
-      }
-      .lf{
-        margin-left:70px;
-      }
-    }
+  button {
+    width: 4.5rem;
+    height: 0.74rem;
+    .dib;
+    color: white;
+    background-color: #24a7c6;
+    .font-s(0.3rem);
+    border: none;
+  }
+  .after{
+    .bgcolor(#fdbc48);
+  }
+  span {
+    width: 4.5rem;
+    height: 0.74rem;
+    .dib;
+    color: white;
+    background-color: #24a7c6;
+    .font-s(0.3rem);
+    border: none;
+    line-height: 0.74rem;
+    margin-top: 20px;
+  }
+  div {
+    margin-top: 20px;
+    width: 4.5rem;
+    height: 0.74rem;
+    .dib;
+    color: white;
+    background-color: #24a7c6;
+    .font-s(0.3rem);
+    border: none;
+    line-height: 0.74rem;
+    margin-left: 80px;
+  }
+  .step2{
+    margin-left: 0;
+  }
+  .step4 {
+    margin-left: 80px;
+    margin-top: 20px;
   }
 }
