--- a/css/practice.css
+++ b/css/practice.css
@@ -1,23 +1,57 @@
-@charset "utf-8";
-.pumant {
-  left: 0;
-  right: 0;
-  top: 0;
+img {
+    width: 100%;
 }
-.pumanb {
-  left: 0;
-  right: 0;
-  bottom: 0;
+
+.li_img {
+    width: 800px;
+    float: left;
+    list-style: none;
 }
-.lay {
-  height: 200px;
-  width: 200px;
-  border: 2px solid green;
+
+.ul_img {
+    width: 6000px;
+    padding: 0px;
+    margin: 0px;
+    transition: all 2s;
 }
-.lay div {
-  background-color: #ff0000;
-  height: 30px;
-  position: fixed;
-  transform: translate(-50%);
-  left: 25%;
+
+.main_div {
+    width: 800px;
+    overflow: hidden;
+    position: relative;
+    top: 100px;
+    left: 350px;
+}
+
+.arrows {
+    z-index: 9999;
+    position: absolute;
+    padding-top: 230px;
+    width: 800px;
+}
+
+.arrows span {
+    font-size: 3em;
+    color: seashell;
+}
+
+.arrows span:hover {
+    /*变小手*/
+    cursor: pointer;
+    background-color: rgba(192, 192, 192, 0.29);
+}
+
+.div_btn {
+    float: left;
+    border-radius: 100px;
+    background-color: aquamarine;
+    width: 60px;
+    height: 10px;
+    margin-left: 10px;
+    margin-top: 130px;
+}
+
+.div_btn:hover {
+    background-color: aqua;
+
 }
