--- a/css/task4-2.css
+++ b/css/task4-2.css
@@ -2380,57 +2380,64 @@ main {
   width: 97%;
   margin: 1rem auto;
   background-color: #ffffff;
-  height: 6rem;
-}
-main .day {
-  padding: 0.34rem 0;
-  color: #29bde0;
+  height: 26rem;
   font-size: 0.3rem;
-  width: 100%;
-  border-bottom: 1px solid lightgrey;
+}
+main h1 {
   text-align: center;
-}
-main .process {
-  display: flex;
-}
-main .process .left {
-  flex: 1;
-  border-right: 1px solid lightgrey;
-}
-main .process .right {
-  flex: 5;
-}
-main .process .right img {
-  margin-left: -30px;
-}
-main .process .right .triangle {
-  width: 20px;
-  position: absolute;
-  margin-top: 40px;
-  display: inline-block;
-  border-style: dashed solid dashed dashed;
-  border-color: transparent #24a7c6 transparent transparent;
-  border-width: 20px;
-  width: 0;
-  height: 0;
-  overflow: hidden;
-}
-main .process .right .lef {
-  margin-left: 30px;
-}
-main .process .right button {
-  margin-left: 40px;
-  width: 80%;
-  background-color: #24a7c6;
-  height: 0.73rem;
-  border: none;
-  color: white;
   font-size: 0.3rem;
-  margin-top: 0.23rem;
+  color: #29bde0;
+  width: 100%;
+  padding: 20px 0 30px 0;
+  border-bottom: 1px solid #c9c9c9;
 }
-main .process .right .after {
+main ul {
+  display: none;
+  text-align: center;
+  list-style-type: none;
+}
+main ul img {
+  margin-right: 20px;
+}
+main button {
+  width: 4.5rem;
+  height: 0.74rem;
+  display: inline-block;
+  color: white;
+  background-color: #24a7c6;
+  font-size: 0.3rem;
+  border: none;
+}
+main .after {
   background-color: #fdbc48;
 }
-main .process .right .lf {
-  margin-left: 70px;
+main span {
+  width: 4.5rem;
+  height: 0.74rem;
+  display: inline-block;
+  color: white;
+  background-color: #24a7c6;
+  font-size: 0.3rem;
+  border: none;
+  line-height: 0.74rem;
+  margin-top: 20px;
+}
+main div {
+  margin-top: 20px;
+  width: 4.5rem;
+  height: 0.74rem;
+  display: inline-block;
+  color: white;
+  background-color: #24a7c6;
+  font-size: 0.3rem;
+  border: none;
+  line-height: 0.74rem;
+  margin-left: 80px;
+}
+main .step2 {
+  margin-left: 0;
+}
+main .step4 {
+  margin-left: 80px;
+  margin-top: 20px;
 }
