--- a/css/task5-js.css
+++ b/css/task5-js.css
@@ -2350,30 +2350,25 @@ html {
   font-size: 625%;
 }
 body {
-  background: url("../img/loginphoto.jpg");
+  background: url("../img/loginphoto.jpg") no-repeat;
   background-size: cover;
 }
-.login {
-  width: 5rem;
-  height: 3rem;
-  margin: 0 auto;
-  background-color: #29bde0;
-  position: absolute;
-  top: 20%;
-  left: 30%;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-direction: column;
+.form{
+  width:30%;
+  margin:0 auto;
+  margin-top:10%;
 }
-.login input {
+button{
+  width:30%;
+  height:5rem;
+  margin:4rem auto!important;
   display: block;
-  width: 90%;
-  height: 0.5rem;
+  color:white!important;
+  background-color: #1b91ff;
+  box-shadow: 1px 1px 1px 1px lightgrey;
+  border:none;
 }
-.login #flogin {
-  width: 90%;
-  background-color: #fd9f0b;
-  border: none;
-  height: 0.5rem;
+p{
+  color:salmon;
+  position: absolute;
 }
