--- a/less/task2-js.less
+++ b/less/task2-js.less
@@ -126,11 +126,11 @@ header{
   }
   div{
     .flexb;
-    width:80%;
+    width:70%;
     margin:0 auto;
      input[type=range]{
       -webkit-appearance: none;
-      width:70%;
+      .w100;
       border-radius: 10px;
        &::-webkit-slider-runnable-track{
          height: 15px;
@@ -139,7 +139,7 @@ header{
        &::-webkit-slider-thumb {
          -webkit-appearance: none;
          height: 45px;
-         width: 85px;
+         width: 60px;
          margin-top:-15px;
          background: url("../img/volume.png") left center no-repeat;
 
