--- a/css/task4-2.css
+++ b/css/task4-2.css
@@ -2411,6 +2411,9 @@ main button {
 main .after {
   background-color: #fdbc48;
 }
+main .tq {
+  background-color: #fdbc48;
+}
 main span {
   width: 4.5rem;
   height: 0.74rem;
