--- a/less/task4-2.less
+++ b/less/task4-2.less
@@ -75,6 +75,9 @@ main {
   .after{
     .bgcolor(#fdbc48);
   }
+  .tq{
+    .bgcolor(#fdbc48);
+  }
   span {
     width: 4.5rem;
     height: 0.74rem;
